deploy/prod/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ipfs-upload-relay
  namespace: crossbell
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ipfs-upload-relay
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ipfs-upload-relay
    spec:
      containers:
        - image: $IMAGE_TAG_RELEASE
          imagePullPolicy: Always
          name: ipfs-upload-relay
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: '30Mi'
              cpu: '50m'
            limits:
              memory: '300Mi'
              cpu: '100m'
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 20
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
