deploy/prod/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipfs-upload-relay
  namespace: crossbell
spec:
  type: ClusterIP
  selector:
    app: ipfs-upload-relay
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
